# auto-diagnostic

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/datasource/: app_description.rs  cloudwatch_log_insight.rs  cloudwatch_metric.rs  ds.rs  ec2.rs  rds.rs
src/lib/: args.rs  config.rs  context.rs  openai.rs  prompt.rs
