[package]
name = "auto-diagnostic"
version = "1.0.0"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
aws-config = "1.5.5"
aws-sdk-cloudwatch = "1.44.0"
aws-sdk-cloudwatchlogs = "1.43.0"
aws-sdk-ec2 = "1.67.0"
aws-sdk-pi = "1.40.0"
aws-sdk-rds = "1.50.0"
aws-smithy-types = "1.2.2"
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
indicatif = "0.17.8"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
