[package]
name = "auto-diagnostic"
version = "1.0.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
aws-config = "1.5.17"
aws-sdk-cloudwatch = "1.66.0"
aws-sdk-cloudwatchlogs = "1.71.0"
aws-sdk-ec2 = "1.113.0"
aws-sdk-rds = "1.79.0"
aws-smithy-types = "1.2.13"
chrono = "0.4.40"
chrono-tz = "0.10.1"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
futures = "0.3.31"
indicatif = "0.17.11"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.20"
